2018-02-18  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-quit): Maintain frame isolation when in fb-mode. Update
	docstring.
	(w3m-close-window): Update doscstring.

	* w3m-fb.el (w3m-fb-delete-frame-buffers): Kill all buffers directly
	instead of incrementally moving to next one. This also is part of the
	fix so that frame isolation is maintained in fb-mode after quitting.
	[emacs-w3m:12916].

2018-02-18  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-search.el (w3m-search-default-engine): Restrict options to valid
	current choices and present them as radio buttons ([emacs-w3m:12915]).

2018-02-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-session.el: Tidy up source code so as to be within 80-column.

2018-02-16  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-session.el: Reformat docstrings for proper opening summary
	sentence ([emacs-w3m:12912]).

2018-02-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-fb.el (w3m-fb-mode, w3m-fb-delete-frame-kill-buffers):
	Use delete-frame-functions.
	(w3m-fb-delete-frame-functions): Remove.

	* w3m-util.el (w3m-delete-frames-and-windows): Bind
	delete-frame-functions so as not to run w3m-fb-delete-frame-buffers.
	(w3m-delete-w3m-initial-frames): Remove obsolete delete-frame-hook.

2018-02-15  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-session.el: Add commentary, correct grammar of prompts..
	(w3m-session-group-open): New variable
	(w3m-session-select-quit): Quitting a session-group display returns to
	its parent session list display.
	(w3m-session-select-open-session-group, w3m-session-select-rename)
	(w3m-session-select-delete): Stay on proper line when within
	session-group display, after renaming or deleting an entry. This
	required adding an optional arg to the function.
	(w3m-session-rename): Allow renaming individual tabs of a session.
	(w3m-session-delete): Allow deleting individual tabs of a session.
	[emacs-w3m:12907]

2018-02-14  Boruch Baum  <boruch_baum@gmx.com>
